--- a/.github/workflows/run_script.yml
+++ b/.github/workflows/run_script.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Install telebot
       run: |
-        pip install python-telegram-bot python-dotenv pyTelegramBotAPI pymongo certifi requests aiohttp telebot --break-system-packages
+        pip install python-telegram-bot python-dotenv pyTelegramBotAPI pymongo certifi requests aiohttp telebot flask --break-system-packages
 
     - name: Install system dependencies
       run: |
